--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
                         <h1 class="text-huge-title">
                             I am Luis, <br>
-                            a fullstack <br> 
-                             developer based <br>
+                            a Software <br> 
+                             Engineer based <br>
                             in Sacramento, CA.
                         </h1>
                     </div>
@@ -135,11 +135,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                                velit esse cillum dolore eu fugiat nulla pariatur.
+                                i'm a mexican-american male, born and raised in Sacramento,CA. 
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download Resume</a>
 
