--- a/index.html
+++ b/index.html
@@ -509,11 +509,13 @@
                                     <li>DSA and practice</li>
                                 </ul>
                                 <ul class="modal-popup__techstack">
-                                    <li>react.js,</li>
-                                    <li>tailwind,</li>
-                                    <li>graphQl api,</li>
-                                    <li>express,</li>
-                                    <li>vite,</li>
+                                    <li>react.js</li>
+                                    <li>tailwind</li>
+                                    <li>sass</li>
+                                    <li>postgress</li>
+                                    <li>graphQl api</li>
+                                    <li>express</li>
+                                    <li>vite</li>
                                     <li>cors</li>
                                 </ul>
                             </div>
@@ -528,12 +530,12 @@
                 
                             <div class="modal-popup__desc">
                                 <h5>Better PSN</h5>
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                <p>I created the site because Sony does not offer a way to see your friends onine status. with this site you can log into your PSN account and view your friends online Staus, what they are curretnly playing, level, and more.</p>
                                 <ul class="modal-popup__cat">
-                                    <li>Branding</li>
+                                    <li>Social</li>
                                 </ul>
                                 <ul class="modal-popup__techstack">
-                                    <li>react.js,</li>
+                                    <li>express,</li>
                                     <li>tailwind,</li>
                                     <li>graphQl api,</li>
                                     <li>express,</li>
@@ -542,7 +544,7 @@
                                 </ul>
                             </div>
                 
-                            <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                            <a href="https://github.com/LS2355/Better-PSN" class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
 
